--- a/static/mobile/css/style.less
+++ b/static/mobile/css/style.less
@@ -27,6 +27,8 @@ a {
   width: 100%;
   background-color: #5C5C5C;
   color: white;
+  min-height: 46px;
+  line-height: 46px;
 
   .back, .title, .search {
     display: table-cell;
